--- a/AppHotel/Views/CalculoFinalHospedagem.xaml
+++ b/AppHotel/Views/CalculoFinalHospedagem.xaml
@@ -4,10 +4,47 @@
              x:Class="AppHotel.Views.CalculoFinalHospedagem"
              Title="CalculoFinalHospedagem"
              NavigationPage.HasNavigationBar="False">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout Spacing="5" VerticalOptions="Center" HorizontalOptions="Center">
+        <Label Margin="10 0" Text="Valor Final da Hospedagem"
+               FontSize="24"/>
+        <Frame>
+            <VerticalStackLayout>
+                <Grid ColumnDefinitions="*,*" RowDefinitions="*,*,*">
+                    <Label Margin="2" Grid.Column="0" Grid.Row="0" Text="Acomodação:"/>
+                    <Label Margin="2" Grid.Column="0" Grid.Row="1" Text="Adultos:"/>
+                    <Label Margin="2" Grid.Column="0" Grid.Row="2" Text="Crianças:"/>
+
+                    <Label Margin="2" Grid.Column="1" Grid.Row="0" Text="Suite de Luxo"/>
+                    <Label Margin="2" Grid.Column="1" Grid.Row="1" Text="2"/>
+                    <Label Margin="2" Grid.Column="1" Grid.Row="2" Text="3"/>
+
+                </Grid>
+                      
+            </VerticalStackLayout>
+        </Frame>
+        <Frame>
+            <VerticalStackLayout>
+                <Grid ColumnDefinitions="*, *" RowDefinitions="*, *, *">
+                
+                    <Label Margin="3" Grid.Column="0" Grid.Row="0" Text="Check-in:"/>
+                    <Label Margin="3" Grid.Column="0" Grid.Row="1" Text="Check-out:"/>
+
+                    <Label Margin="3" Grid.Column="1" Grid.Row="0" Text="22/07/2025"/>
+                    <Label Margin="3" Grid.Row="1" Grid.Column="1" Text="25/09/2025"/>
+                </Grid>
+
+            </VerticalStackLayout>
+            
+        </Frame>
+        <Frame>
+
+            <HorizontalStackLayout>
+                <Grid ColumnDefinitions="*, *">
+                    <Label Margin="3" Grid.Column="0" Text="Valor da Reserva:"/>
+                    <Label Margin="3" Grid.Column="1" Text="R$ 99,99"/>
+                </Grid>
+            </HorizontalStackLayout>
+        </Frame>
+        <Button Margin="10 0" Text="Voltar" Clicked="Button_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
